--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roma Encoder</title>
     
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
 
 
     <!--link da font do título do game-->
@@ -91,7 +91,7 @@
         </div>
     </main>
     
-    <script src="/script/main.js"></script>
+    <script src="./script/main.js"></script>
 
 </body>
 </html>
